# LLMOPS_RAG_V1

./: .gitignore  README.md  main.py  pyproject.toml
data/: agentic_ai.txt
notebook/: RAG.ipynb
