[project]
name = "llmops-rag-v1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-mistralai>=1.1.1",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.2.1",
]
